--- a/src/app/view/delete-model/delete-model.component.html
+++ b/src/app/view/delete-model/delete-model.component.html
@@ -1,3 +1,4 @@
+<button type="button" class="btn btn-default" (click)="modal_id.open('sm')">Open me!</button>
 <modal #modal_id>
     <modal-header [show-close]="true">
         <h4 class="modal-title">Are you sure!</h4>
