--- a/src/app/view/delete-model/delete-model.component.html
+++ b/src/app/view/delete-model/delete-model.component.html
@@ -3,8 +3,9 @@
     <modal-header [show-close]="true">
         <h4 class="modal-title">Are you sure!</h4>
     </modal-header>
-    <modal-body>
-        Hello World!
-    </modal-body>
-    <modal-footer [show-default-buttons]="true"></modal-footer>
+  
+    <modal-footer>
+            <button type="button" class="btn btn-default" data-dismiss="modal" (click)="validationModal.dismiss()">Cancel</button>
+            <button type="button" class="btn btn-primary" [disabled]="!modalForm.valid" (click)="validationModal.close()">Ok</button>
+        </modal-footer>
 </modal>
