create new component venue

--- a/src/app/view/layouts/header/header.component.html
+++ b/src/app/view/layouts/header/header.component.html
@@ -107,6 +107,7 @@
                                         <ul class="sub-menu">
                                             <li class=""><a href="" [routerLink]="['/profile']">Profile</a></li>
                                             <li class=""><a href="" [routerLink]="['/my-organizations']">My Organization's</a></li>
+                                            <li class=""><a href="" [routerLink]="['/my-venues']">My Venue's</a></li>
                                             <li class=""><a href="" [routerLink]="['/groups']">My Groups</a></li>
                                             <li class=""><a href="" [routerLink]="['/notification-setting']">Notification Settings</a></li> 
                                             <li class=""><a href="" [routerLink]="['/changepassword']">Change Password</a></li>
