--- a/src/app/view/edit-profile/edit-profile.component.html
+++ b/src/app/view/edit-profile/edit-profile.component.html
@@ -8,6 +8,8 @@
                     <a [routerLink]="['/']" title="wamasoftware" rel="home" class="trail-begin">Home</a>
                 </span> 
                 <span class="sep">»</span> 
+                <span class="trail-end"> <a [routerLink]="['/profile']">Profile</a></span>
+                <span class="sep">»</span> 
                 <span class="trail-end">Edit Profile</span>
             </div>
         </div>
@@ -120,7 +122,7 @@
               </div>
               <div class="form_row ">
                 <button class="btn btn-info" type="submit">Update</button>
-                <a class="btn btn-info" type="reset" value="Save" name="submit">Cancel</a>	
+                <a class="btn btn-info" [routerLink]="['/profile']" value="Save" name="submit">Cancel</a>	
             </div>
         </div>
     </form>
