--- a/src/app/view/eventadd/eventadd.component.html
+++ b/src/app/view/eventadd/eventadd.component.html
@@ -55,33 +55,67 @@
                 <div class="event-edit-form large-6 small-12 columns">
                     <div class="form_row clearfix">
                         <label>Country<span class="indicates">*</span></label>                        
-                        <select class="form-control" name="country" [(ngModel)]="country" >
+                        <!--<select class="form-control" name="country" [(ngModel)]="country" >
                             <option *ngFor="let country of countryList" value="{{country.id}}" (click)="getState(country.id)" >{{country.name}}</option>
-                        </select>
+                        </select> -->    
+
+                         <ng-select name="countryList" (data)="countryArr"                                                      
+                            [items]="countryArr"
+                            (selected)="getState($event)"
+                            placeholder="No country selected">
+                            </ng-select>
+                        <input type="hidden" name="country" [(ngModel)]="country">    
+
                     </div>
                     <div class="form_row clearfix">
                         <label>State<span class="indicates">*</span></label>                        
-                        <select class="form-control" name="state" [(ngModel)]="state" >
+                        <!--<select class="form-control" name="state" [(ngModel)]="state" >
                             <option *ngFor="let state of stateList" value="{{state.state_id}}" (click)="getCIty(state.state_id)" >{{state.name}}</option>
-                        </select>
+                        </select>-->
+
+                        <ng-select name="stateList" (data)="stateList"                                                      
+                            [items]="stateList"
+                            (selected)="getCIty($event)"
+                            placeholder="No state selected">
+                        </ng-select>
+                        <input type="hidden" name="state" [(ngModel)]="state"> 
+
                     </div>
                     <div class="form_row clearfix">
                         <label>City<span class="indicates">*</span></label>                        
-                        <select class="form-control" name="city" [(ngModel)]="city" >
+                        <!--<select class="form-control" name="city" [(ngModel)]="city" >
                             <option *ngFor="let city of cityList" value="{{city.city_id}}">{{city.name}}</option>
-                        </select>
+                        </select>-->
+                        <ng-select name="cityList" (data)="cityList"                                                      
+                            [items]="cityList"
+                            (selected)="city"
+                            placeholder="No city selected">
+                        </ng-select>
+                        <input type="hidden" name="city" [(ngModel)]="city"> 
                     </div>
                     <div class="form_row clearfix">
                         <label>Organization<span class="indicates">*</span></label>
-                        <select class="form-control" name="organization" [(ngModel)]="organization" >
+                        <!--<select class="form-control" name="organization" [(ngModel)]="organization" >
                             <option *ngFor="let organization of organizationList" value="{{organization.organization_id}}">{{organization.organization_name}}</option>
-                        </select>                       
+                        </select> --> 
+                         <ng-select name="organizationList" (data)="organizationList"                                                       
+                            [items]="organizationList"
+                            (selected)="organization"
+                            placeholder="No organization selected">
+                        </ng-select>
+                        <input type="hidden" name="organization" [(ngModel)]="organization">                     
                     </div>
                     <div class="form_row clearfix">
                         <label>Location<span class="indicates">*</span></label>
-                        <select class="form-control" name="location" [(ngModel)]="location" >
+                        <!--<select class="form-control" name="location" [(ngModel)]="location" >
                             <option *ngFor="let venue of venueList" value="{{venue.venue_id}}">{{venue.address}}</option>
-                        </select>                       
+                        </select>-->
+                        <ng-select name="locationList" (data)="venueList"                                                       
+                            [items]="venueList"
+                            (selected)="location"
+                            placeholder="No location selected">
+                        </ng-select>
+                        <input type="hidden" name="location" [(ngModel)]="location">                       
                     </div>
                     <div class="form_row clearfix">
                         <label>Intended Audience:</label>
@@ -130,8 +164,8 @@
                 </div>
                 <div class="col-sm-12">
                     <div class="form_row ">
-                        <a class="btn btn-warning" type="submit" value="Save" name="submit">Save</a>	
-                        <a class="btn btn-warning" type="reset" value="Cancel" name="reset">	Cancel</a>
+                        <a class="btn btn-warning" type="submit" value="Save" name="submit">Save</a>    
+                        <a class="btn btn-warning" type="reset" value="Cancel" name="reset">    Cancel</a>
                     </div>
                 </div>
             </form>
@@ -142,22 +176,22 @@
         <div id="sidebar-primary" class="sidebar large-3 small-12 columns">
             <!-- 300x600 ad_space -->
             <div id="templatic_text-1" class="widget templatic_text">
-                <div class="widget-wrap widget-inside">		
-                    <div class="textwidget text-center">	
+                <div class="widget-wrap widget-inside">     
+                    <div class="textwidget text-center">    
                         <a href="">
                             <img src="app/assets/images/ads images/300x600.jpg">
-                        </a>	
+                        </a>    
                     </div>
                 </div>
             </div>
             
             <!-- 300x150 ad_space -->
             <div id="templatic_text-1" class="widget templatic_text">
-                <div class="widget-wrap widget-inside">		
-                    <div class="textwidget text-center">	
+                <div class="widget-wrap widget-inside">     
+                    <div class="textwidget text-center">    
                         <a href="">
                             <img src="app/assets/images/ads images/300x150.jpg">
-                        </a>	
+                        </a>    
                     </div>
                 </div>
             </div>
