--- a/src/app/view/event-detail/event-detail.component.html
+++ b/src/app/view/event-detail/event-detail.component.html
@@ -6,7 +6,7 @@
             <div class="breadcrumb-trail">
                 <span class="trail-begin">
 
-                    <a [routerLink]="['/']" title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span> <a href="http://demo.templatic.com/eventum/city/new-york" title="New York">New York</a> <span class="sep">»</span> <a href="http://demo.templatic.com/eventum/city/new-york/event" title="Event">Event</a> <span class="sep">»</span> <a href="http://demo.templatic.com/eventum/city/new-york/ecategory/events/" title="Events">Events</a> <span class="sep">»</span> <span class="trail-end">{{data.event_data.event_title}}</span>
+                    <a [routerLink]="['/']" title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span>  <a [routerLink]="['/event']" title="Events">Events</a> <span class="sep">»</span> <span class="trail-end">{{data.event_data.event_title}}</span>
 
                     
                 </div>
@@ -483,7 +483,7 @@
                         </div><!-- #respond -->
 
                         <div id="respond" class="comment-respond" *ngIf = "getToken">
-                            <h3 id="reply-title" class="comment-reply-title">Add a Review</h3>
+                            <h3 id="reply-title" class="comment-reply-title">Add a Review</h3> 
                             <div style="margin-top: 35px;">
                                <label style="float:left;">Comment :</label>
                                <textarea id="comment" name="comment" placeholder="Message" cols="100%" rows="10" tabindex="4" style="width:600px; height: 154px;margin-left: 50px;"></textarea><br>
@@ -491,8 +491,9 @@
                                <div class="container" style="width: 350px;margin: 0;padding: 15px;">
                                    <label style="margin-left: 70px;"><rating [(ngModel)]="starsCountRating"></rating></label>
                                </div>
-                               <button class="btn btn-info" type="submit" style="margin: 20px 0px 10px 0px; ">Submit Review</button> 
-                           </div>     
+                               <button type="submit" style="margin: 20px 0px 10px 0px; ">Submit Review</button> 
+                           </div> 
+                              
                        </div>
 
                    </div>
@@ -632,7 +633,7 @@
                         <a href="" title="{{popular_event.event_title}}" class="link_img" data-rel="">
                             <img src="{{ popular_event.featured_image }}" alt="{{popular_event.event_title}}" class="Thumbnail thumbnail popular_post-thumbnail " width="60" height="60"></a>
 
-                            <div class="post_data"><h3><a href="http://demo.templatic.com/eventum/city/new-york/event/things-to-do/" title="{{popular_event.event_title}}">{{popular_event.event_title}}</a></h3><p><span class="views"> <a href="http://demo.templatic.com/eventum/city/new-york/event/things-to-do/#comments">8 Comments</a></span><span class="date">2 years ago</span></p></div></li>
+                            <div class="post_data"><h3><a (click)="gotoPage(popular_event.event_id)" title="{{popular_event.event_title}}">{{popular_event.event_title}}</a></h3><p><span class="views"> <a>8 Comments</a></span><span class="date">2 years ago</span></p></div></li>
 
 
                         </ul>
