--- a/src/app/assets/css/Directory/css/style.css
+++ b/src/app/assets/css/Directory/css/style.css
@@ -830,7 +830,7 @@ body #loop_property_taxonomy .post .entry .entry-title, #tmpl-search-results .po
 
 article.author-admin { border:none }
 article.hentry, article.post { border-bottom:1px solid #e0e0e0\0/; border-bottom:1px solid rgba(0, 0, 0, .13); padding-bottom:25px; margin-bottom:25px }
-article.hentry img, article.post img { border:none; max-width:100%; height:auto!important; padding:0 }
+article.hentry img, article.post img { border:none; max-width:100%; height:150px; padding:0 }
 article .post_fig { display:inline-block; *display:inline;zoom:1; vertical-align:top; position:relative; float:left; width:29.5%; margin:0 2.5% 0 0 }
 article .post_fig .featured_tag { position:absolute; top:10px; left:0; background:#FEDA70; color:#2C2C2C; font-size:13px; font-weight:700; padding:2px 8px }
 article .entry-header { display:inline-block; *display:inline;zoom:1; vertical-align:top; width:68% }
